--- a/index.html
+++ b/index.html
@@ -19,20 +19,16 @@
         <main>
             <div class="information-all">
                 <div class="col-6-asb">
-                    <div class="col-3 peasonal">
-                        <img class="peasonal-image" src="./static/image/peason.png" alt="">
+                    <div class="col-6 center">
+                        <img class="peasonal-image col-12" src="./static/image/peason.png" alt="">
                     </div>
-                    <div class="col-9 item">
+                    <div class="col-6 item">
                         <p class="title name">
                             吴宗文
                         </p>
-                        <div class="col-6">
+                        <div class="col-9">
                             <p class="phone">18521099512</p>
-                            <p class="education">大专</p>
-                        </div>
-                        <div class="col-6">
-                            <p class="email">wuzongwen@live.com</p>
-                            <p class="profession"></p>
+                             <p class="email">wuzongwen@live.com</p>
                         </div>
                     </div>
                 </div>
@@ -64,23 +60,78 @@
                 </div>
             </div>
             <section>
+                <div class="title work">
+                    <p>技能清单</p>
+                </div>
+                <div class="w-experience-detail col-6-asb">
+                    <div class="item w-experience-content ml15">
+                        <div class="work-content">
+                            <p class="job">BS&CS开发</p>
+                            <ul>
+                                <li>C#/ASP/PHP/</li>
+                            </ul>
+                            <p class="job"></p>
+                            <p class="job">前端开发</p>
+                            <ul>
+                                <li>Layui/Bootstrap/Jquery</li>
+                            </ul>
+                            <p class="job"></p>
+                            <p class="job">数据库相关技术</p>
+                            <ul>
+                                <li>ADO.NET/EntityFramework/LINQ/SqlSugar/</li>
+                            </ul>
+                            <p class="job"></p>
+                            <p class="job">数据库</p>
+                            <ul>
+                                <li>MSSQL/MySql/Access/Oracle/Redis/SqlLite</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-experience-detail col-6-asb">
+                    <div class="item w-experience-content">
+                        <div class="work-content ml15">
+                            <p class="job"></p>
+                            <p class="job">移动平台开发</p>
+                            <ul>
+                                <li>基于Xamarin安卓开发</li>
+                            </ul>
+                            <p class="job"></p>
+                            <p class="job">云和开放平台</p>
+                            <ul>
+                                <li>微信公众号/支付宝生活号/微博开放平台/腾讯开放平台</li>
+                            </ul>
+                            <p class="job">版本管理</p>
+                            <ul>
+                                <li>Svn/GitHub/TFS</li>
+                            </ul>
+                            <p class="job"></p>
+                            <p class="job">操作系统</p>
+                            <ul>
+                                <li>Windows/Linux</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section>
                 <div class="title project">
                     <p>项目经验</p>
                 </div>
                 <div class="project-detail">
                     <div class="col-3-abs" id="project-0">
-                        <div class="project-content"> <img src="./static/image/LOGO1.png" alt="">
-                            <p class="project-title">Paxxal后台搭建</p>
-                            <p class="create-time">2014.8 - 2014.9</p>
-                            <p class="decription"> 该作品使用了MVC设计模式，SqlServer数据库，Servlet、jquery ajax的技术上制作的一个动态购物网站，实现了在数据库查询出商品显示在页面上，实现了购物车与购买功能，并对数据库进行相应操作。 </p>
+                        <div class="project-content">
+                            <p class="project-title">日立阿洛卡超声员工培训系统</p>
+                            <p class="create-time">2015.8 - 2015.12</p>
+                            <p class="decription"> 该作品使用了MVC设计模式，SqlServer数据库，jquery ajax的技术上制作的一个销售人员培训系统，该系统实现观看视频课程、在线考试、销售人员管理等功能。 </p>
                         </div>
                         <div class="link-to">
-                            <a href="https://www.baidu.com" class="button">查看DEMO</a>
+                            <a href="javascript:alert('该项目为内部使用产品,不可演示');" class="button">查看DEMO</a>
                             <div class="shadow"></div>
                         </div>
                     </div>
                     <div class="col-3-abs" id="project-1">
-                        <div class="project-content"> <img src="./static/image/LOGO2.png" alt="">
+                        <div class="project-content">
                             <p class="project-title">聊天应用开发</p>
                             <p class="create-time">2014.8 - 2014.9</p>
                             <p class="decription"> 该作品使用了MVC设计模式，SqlServer数据库，Servlet、jquery ajax的技术上制作的一个动态购物网站，实现了在数据库查询出商品显示在页面上，实现了购物车与购买功能，并对数据库进行相应操作。 </p>
@@ -91,13 +142,13 @@
                         </div>
                     </div>
                     <div class="col-3-abs endline" id="project-2">
-                        <div class="project-content"> <img src="./static/image/LOGO3.png" alt="">
+                        <div class="project-content">
                             <p class="project-title">购物商城前端搭建</p>
                             <p class="create-time">2014.8 - 2014.9</p>
                             <p class="decription"> 该作品使用了MVC设计模式，SqlServer数据库，Servlet、jquery ajax的技术上制作的一个动态购物网站，实现了在数据库查询出商品显示在页面上，实现了购物车与购买功能，并对数据库进行相应操作。 </p>
                         </div>
                         <div class="link-to">
-                            <a href="https://www.baidu.com" class="button">查看DEMO</a>
+                            <a href="#" class="button">查看DEMO</a>
                             <div class="shadow"></div>
                         </div>
                     </div>
@@ -109,9 +160,6 @@
                 </div>
                 <div class="w-experience-detail">
                     <div class="item w-experience-content">
-                        <div class="logo">
-                            <img class="company-logo" src="./static/image/LOGO4.png" alt="">
-                        </div>
                         <div class="work-content">
                             <p class="create-time">2014.10 - 2016.10</p>
                             <p class="job">产品经理 | 多桔子信息科技有限公司</p>
@@ -125,9 +173,6 @@
                         </div>
                     </div>
                     <div class="item w-experience-content">
-                        <div class="logo">
-                            <img class="company-logo" src="./static/image/LOGO5.png" alt="">
-                        </div>
                         <div class="work-content">
                             <p class="create-time">2014.10 - 2016.10</p>
                             <p class="job">软件开发工程师 | SINGU</p>
@@ -149,9 +194,9 @@
                 <div class="peasonal-message">
                     <img class="peasonal-image" src="./static/image/peason.png" alt="">
                     <div class="item">
-                        <p class="name">梁博奇 Alex</p>
-                        <p class="phone">135 1111 8888</p>
-                        <p class="email">XXXXXX@sina.com</p>
+                        <p class="name">吴宗文</p>
+                        <p class="phone">18521099512</p>
+                        <p class="email">wuzongwen@live.com</p>
                     </div>
                     <div class="item contact">
                         <div class="col-3 qrcode">
@@ -160,24 +205,24 @@
                         <div class="col-9">
                             <p>了解更多的我</p>
                             <div class="icon-container">
-                                <a href="#" class="icon">
-                                    <img src="./static/image/giteeICON.png" alt="">
+                                <a href="https://wuzongwen.github.io/" target="_blank" class="icon">
+                                    <img src="./static/image/github.png" alt="">
                                 </a>
-                                <a href="#" class="icon">
-                                    <img src="./static/image/zhihuICON.png" alt="">
+                                <a href="https://blog.csdn.net/wu_zongwen" target="_blank" class="icon">
+                                    <img src="./static/image/csdn.png" alt="">
                                 </a>
-                                <a href="#" class="icon">
-                                    <img src="./static/image/weiboICON.png" alt="">
+                                <a href="tencent://message/?uin=136891488&Site=&Menu-=yes" class="icon">
+                                    <img src="./static/image/qq.png" alt="">
                                 </a>
-                                <a href="#" class="icon">
-                                    <img src="./static/image/oscICON.png" alt="">
+                                <a href="https://gitee.com/dang_wu" class="icon">
+                                    <img src="./static/image/gitee.png" alt="">
                                 </a>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
-            <p class="footer">© Gitee.com</p>
+            <p class="footer">© https://wuzongwen.github.io/</p>
         </footer>
     </div>
 </body>
