--- a/index.html
+++ b/index.html
@@ -206,10 +206,10 @@
                             <p>了解更多的我</p>
                             <div class="icon-container">
                                 <a href="https://wuzongwen.github.io/" target="_blank" class="icon">
-                                    <img src="./static/image/github.png" alt="">
+                                    <img src="./static/image/GitHub.png" alt="">
                                 </a>
                                 <a href="https://blog.csdn.net/wu_zongwen" target="_blank" class="icon">
-                                    <img src="./static/image/csdn.png" alt="">
+                                    <img src="./static/image/CSDN.png" alt="">
                                 </a>
                                 <a href="tencent://message/?uin=136891488&Site=&Menu-=yes" class="icon">
                                     <img src="./static/image/qq.png" alt="">
