--- a/index.html
+++ b/index.html
@@ -121,35 +121,33 @@
                 <div class="project-detail">
                     <div class="col-3-abs" id="project-0">
                         <div class="project-content">
-                            <p class="project-title">日立阿洛卡超声员工培训系统</p>
-                            <p class="create-time">2015.8 - 2015.12</p>
-                            <p class="decription"> 该作品使用了MVC设计模式，SqlServer数据库，jquery ajax的技术上制作的一个销售人员培训系统，该系统实现观看视频课程、在线考试、销售人员管理等功能。 </p>
+                            <p class="project-title">图书馆/文化馆大数据墙</p>
+                            <p class="create-time">2018.9 - 2019.1</p>
+                            <p class="decription"> 该作品使用了ASP.NET MVC5+EF CodeFirst模式开发，SqlServer 2008R2数据库，jquery ajax的技术上制作的一个销售人员培训系统，该系统实现观看视频课程、在线考试、销售人员管理等功能。 </p>
+                            <p class="decription"> 负责模块: </p>
                         </div>
                         <div class="link-to">
                             <a href="javascript:alert('该项目为内部使用产品,不可演示');" class="button">查看DEMO</a>
                             <div class="shadow"></div>
                         </div>
                     </div>
+                    <div class="col-3-abs" id="project-0">
+                        <div class="project-content">
+                            <p class="project-title">日立阿洛卡超声员工培训系统</p>
+                            <p class="create-time">2015.8 - 2015.12</p>
+                            <p class="decription"> 该项目使用了ASP.NET MVC设计模式，SqlServer数据库，jquery ajax的技术上制作的一个销售人员培训系统，该系统实现观看视频课程、在线考试、销售人员管理等功能。 </p>
+                            <p class="decription"> 负责模块: </p>
+                        </div>
+                        <!--<div class="link-to">
+                            <a href="javascript:alert('该项目为内部使用产品,不可演示');" class="button">查看DEMO</a>
+                            <div class="shadow"></div>
+                        </div>-->
+                    </div>
                     <div class="col-3-abs" id="project-1">
                         <div class="project-content">
-                            <p class="project-title">聊天应用开发</p>
+                            <p class="project-title">小菜生活</p>
                             <p class="create-time">2014.8 - 2014.9</p>
-                            <p class="decription"> 该作品使用了MVC设计模式，SqlServer数据库，Servlet、jquery ajax的技术上制作的一个动态购物网站，实现了在数据库查询出商品显示在页面上，实现了购物车与购买功能，并对数据库进行相应操作。 </p>
-                        </div>
-                        <div class="link-to">
-                            <a href="https://www.baidu.com" class="button">查看DEMO</a>
-                            <div class="shadow"></div>
-                        </div>
-                    </div>
-                    <div class="col-3-abs endline" id="project-2">
-                        <div class="project-content">
-                            <p class="project-title">购物商城前端搭建</p>
-                            <p class="create-time">2014.8 - 2014.9</p>
-                            <p class="decription"> 该作品使用了MVC设计模式，SqlServer数据库，Servlet、jquery ajax的技术上制作的一个动态购物网站，实现了在数据库查询出商品显示在页面上，实现了购物车与购买功能，并对数据库进行相应操作。 </p>
-                        </div>
-                        <div class="link-to">
-                            <a href="#" class="button">查看DEMO</a>
-                            <div class="shadow"></div>
+                            <p class="decription"> 该项目基于ecshop二次开发,支付及物流功能重新开发</p>
                         </div>
                     </div>
                 </div>
