--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <div class="img-header">
                 <div class="content">
-                    <p>&lt;<strong> Nothing is impossible? </strong>&gt;</p>
+                    <p>&lt;<strong> Nothing is impossible</strong>&gt;</p>
                 </div>
             </div>
         </header>
@@ -121,33 +121,179 @@
                 <div class="project-detail">
                     <div class="col-3-abs" id="project-0">
                         <div class="project-content">
-                            <p class="project-title">图书馆/文化馆大数据墙</p>
+                            <p class="project-title">图书馆/文化馆大数据墙2.0(BS)</p>
                             <p class="create-time">2018.9 - 2019.1</p>
-                            <p class="decription"> 该作品使用了ASP.NET MVC5+EF CodeFirst模式开发，SqlServer 2008R2数据库，jquery ajax的技术上制作的一个销售人员培训系统，该系统实现观看视频课程、在线考试、销售人员管理等功能。 </p>
-                            <p class="decription"> 负责模块: </p>
+                            <p class="decription">文化场馆电子大屏数据展示网站 </p>
+                            <p class="decription">该产品使用ASP.NET MVC5+EF CodeFirst模式开发,数据库版本SqlServer 2008R2,使用SignalR实时通讯技术实现页面数据实时更新,后台管理页采用Layui前端框架开发;使用WebApi实现客流计数器的数据对接;图书馆项目借还数据对接部分使用Windows服务定时获取客户Oracle数据库中的数据实现同步.</p>
+                            <p class="decription">负责模块:整个项目需求分析、功能规划、数据库设计、前后端功能开发、测试</p>
+                        </div>
+                    </div>
+                    <div class="col-3-abs" id="project-0">
+                        <div class="project-content">
+                            <p class="project-title">文化易点通(BS)</p>
+                            <p class="create-time">2018.1 - 至今</p>
+                            <p class="decription">该产品有APP端和微信端两部分,微信端扫描APP端的二维码实现资源观看保存 </p>
+                            <p class="decription">该产品使用ASP.NET 三场架构开发,使用SqlSugar框架实现数据库的访问,数据库版本SqlServer 2008R2.</p>
+                            <p class="decription">负责模块:产品后台管理部分及APP端所需数据接口的开发及产品后期维护</p>
+                        </div>
+                    </div>
+                    <div class="col-3-abs" id="project-0">
+                        <div class="project-content">
+                            <p class="project-title">数据墙浏览器(CS)</p>
+                            <p class="create-time">2018.9 - 2019.1</p>
+                            <p class="decription">自适应全屏浏览器 </p>
+                            <p class="decription">该产品使用WinForm+CefSharp开发,是一个基于Google Chromium内核的浏览器,可使用ini配置文件自定义软件配置.</p>
+                            <p class="decription">负责模块:整个产品前后端开发</p>
+                        </div>
+                    </div>
+                    <div class="col-3-abs" id="project-0">
+                        <div class="project-content">
+                            <p class="project-title">大数据墙1.0(BS)</p>
+                            <p class="create-time">2017.12 - 2018.12</p>
+                            <p class="decription">文化场馆电子大屏数据展示网站 </p>
+                            <p class="decription">该产品使用了ASP.NET 三层架构开发,使用SqlSugar框架实现数据库的访问,数据库版本SqlServer 2008R2,使用ajax页面实现页面数据刷新.</p>
+                            <p class="decription">负责模块:整个项目产品的二次开发及维护</p>
+                        </div>
+                    </div>
+                    <div class="col-3-abs" id="project-0">
+                        <div class="project-content">
+                            <p class="project-title">电子资源视频转码工具(CS)</p>
+                            <p class="create-time">2018.7 - 2018.8</p>
+                            <p class="decription">电子资源平台视频批量转码 </p>
+                            <p class="decription">该产品使用WinForm开发，使用ffmpeg实现视频转码.</p>
+                            <p class="decription">负责模块:整个产品功能开发</p>
+                        </div>
+                    </div>
+                    <div class="col-3-abs" id="project-0">
+                        <div class="project-content">
+                            <p class="project-title">上业科技电子资源平台(BS)</p>
+                            <p class="create-time">2017.12 - 至今</p>
+                            <p class="decription">视频、音乐等资源在线播放以及可以在线考试的一个资源整合平台 </p>
+                            <p class="decription">该产品使用ASP.NET 三层架构开发,使用SqlSugar框架实现数据库的访问,数据库版本SqlServer 2008R2.</p>
+                            <p class="decription">负责模块:整个项目产品的二次开发及维护及微信公众号扫码观看功能开发 </p>
+                        </div>
+                    </div>
+                    <div class="col-3-abs" id="project-0">
+                        <div class="project-content">
+                            <p class="project-title">天津经济技术开发区综合项目(BS)</p>
+                            <p class="create-time">2016.12 - 2017.9</p>
+                            <p class="decription">市民服务大厅各信息显示屏数据展示程序</p>
+                            <p class="decription">该项目使用ASP.NET 三层架构开发,使用ADO.NET与数据库进行数据交互,数据库版本SqlServer 2008R2.</p>
+                            <p class="decription">负责模块:整个项目需求沟通、后端功能开发、数据接口对接</p>
+                        </div>
+                    </div>
+                    <div class="col-3-abs" id="project-1">
+                        <div class="project-content">
+                            <p class="project-title">互联微名片(BS)</p>
+                            <p class="create-time">2016.9 - 2016.11</p>
+                            <p class="project-title">微信名片</p>
+                            <p class="decription">该项目使用ThinkPHP+Mysql开发,微信端扫码添加名片.</p>
+                            <p class="decription">负责模块:整个项目前后端功能开发</p>
+                        </div>
+                    </div>
+                    <div class="col-3-abs" id="project-1">
+                        <div class="project-content">
+                            <p class="project-title">BoxPrint(BS)</p>
+                            <p class="create-time">2016.5 - 2016.6</p>
+                            <p class="project-title">现在文档打印网站</p>
+                            <p class="decription">该项目基于Ecshop二次开发,数据库使用Mysql,在线支付及物流功能重新开发.</p>
+                            <p class="decription">负责模块:整个项目前后端功能开发</p>
+                        </div>
+                    </div>
+                    <div class="col-3-abs" id="project-1">
+                        <div class="project-content">
+                            <p class="project-title">莱菔生命科技官网(BS)</p>
+                            <p class="create-time">2016.5 - 2016.6</p>
+                            <p class="project-title">企业官网</p>
+                            <p class="decription">该项目使用ASP.NET MVC设计模式开发、SqlServer数据库开发.</p>
+                            <p class="decription">负责模块:整个项目后端功能开发</p>
+                        </div>
+                    </div>
+                    <div class="col-3-abs" id="project-0">
+                        <div class="project-content">
+                            <p class="project-title">日立阿洛卡超声员工培训系统(BS)</p>
+                            <p class="create-time">2015.8 - 2016.3</p>
+                            <p class="create-time">培训管理系统</p>
+                            <p class="decription">该项目使用了ASP.NET MVC设计模式、SqlServer数据库开发.</p>
+                            <p class="decription">负责模块:在线考试、项目管理、学员管理模块前后端开发</p>
+                        </div>
+                    </div>
+                    <div class="col-3-abs" id="project-1">
+                        <div class="project-content">
+                            <p class="project-title">小菜生活(BS)</p>
+                            <p class="create-time">2015.5 - 2015.7</p>
+                            <p class="decription">该项目基于Ecshop二次开发,数据库使用Mysql;在线支付及物流功能重新开发.</p>
+                            <p class="decription">负责模块:后端开发</p>
+                        </div>
+                    </div>
+                    <div class="col-3-abs" id="project-1">
+                        <div class="project-content">
+                            <p class="project-title">上海远东学院官网(BS)</p>
+                            <p class="create-time">2015.4 - 2015.5</p>
+                            <p class="decription">该项目使用ASP.NET 三层架构、SqlServer2008R2数据库开发.</p>
+                            <p class="decription">负责模块:后端开发 </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="title project">
+                    <p>工作以外经历</p>
+                </div>
+                <div class="project-detail">
+                    <div class="col-3-abs" id="project-0">
+                        <div class="project-content">
+                            <p class="project-title">HideApp(CS)</p>
+                            <p class="decription">任务栏图标隐藏以及窗口大小自定义工具 </p>
+                            <p class="decription">使用Winform+Windows Api开发,实现任务栏图标隐藏显示及指定窗口的大小自定义功能</p>
                         </div>
                         <div class="link-to">
-                            <a href="javascript:alert('该项目为内部使用产品,不可演示');" class="button">查看DEMO</a>
+                            <a href="https://github.com/wuzongwen/HideApp" target="_blank" class="button">GitHub</a>
                             <div class="shadow"></div>
                         </div>
                     </div>
                     <div class="col-3-abs" id="project-0">
                         <div class="project-content">
-                            <p class="project-title">日立阿洛卡超声员工培训系统</p>
-                            <p class="create-time">2015.8 - 2015.12</p>
-                            <p class="decription"> 该项目使用了ASP.NET MVC设计模式，SqlServer数据库，jquery ajax的技术上制作的一个销售人员培训系统，该系统实现观看视频课程、在线考试、销售人员管理等功能。 </p>
-                            <p class="decription"> 负责模块: </p>
+                            <p class="project-title">PrizeDraw(BS)</p>
+                            <p class="decription">年会微信扫码抽奖</p>
+                            <p class="decription">使用ASP.NET MVC5+EF CodeFirst模式开发,数据库版本SqlServer 2008R2,使用Signal实时通信技术实现扫码后页面参与人数的刷新</p>
                         </div>
-                        <!--<div class="link-to">
-                            <a href="javascript:alert('该项目为内部使用产品,不可演示');" class="button">查看DEMO</a>
+                        <div class="link-to">
+                            <a href="https://github.com/wuzongwen/PrizeDraw" target="_blank" class="button">GitHub</a>
                             <div class="shadow"></div>
-                        </div>-->
+                        </div>
                     </div>
-                    <div class="col-3-abs" id="project-1">
+                    <div class="col-3-abs" id="project-0">
                         <div class="project-content">
-                            <p class="project-title">小菜生活</p>
-                            <p class="create-time">2014.8 - 2014.9</p>
-                            <p class="decription"> 该项目基于ecshop二次开发,支付及物流功能重新开发</p>
+                            <p class="project-title">ISBN_JD</p>
+                            <p class="decription">使用ISBN至京东搜索页获取书籍封面</p>
+                            <p class="decription">使用ISBN至京东搜索页获取书籍封面，如查询不到则再次到豆瓣ISBN接口查询</p>
+                        </div>
+                        <div class="link-to">
+                            <a href="https://github.com/wuzongwen/ISBN_JD" target="_blank" class="button">GitHub</a>
+                            <div class="shadow"></div>
+                        </div>
+                    </div>
+                    <div class="col-3-abs" id="project-0">
+                        <div class="project-content">
+                            <p class="project-title">TodayInHistory</p>
+                            <p class="decription">获取聚合数据历史上的今天数据</p>
+                            <p class="decription">获取聚合数据历史上的今天所有数据并下载图片到本地</p>
+                        </div>
+                        <div class="link-to">
+                            <a href="https://github.com/wuzongwen/TodayInHistory" target="_blank" class="button">GitHub</a>
+                            <div class="shadow"></div>
+                        </div>
+                    </div>
+                    <div class="col-3-abs" id="project-0">
+                        <div class="project-content">
+                            <p class="project-title">SQLite-EF6</p>
+                            <p class="decription">EF6操作SQLite小Demo</p>
+                            <p class="decription">包含基础的增删改查</p>
+                        </div>
+                        <div class="link-to">
+                            <a href="https://github.com/wuzongwen/TodayInHistory" target="_blank" class="button">GitHub</a>
+                            <div class="shadow"></div>
                         </div>
                     </div>
                 </div>
@@ -159,26 +305,33 @@
                 <div class="w-experience-detail">
                     <div class="item w-experience-content">
                         <div class="work-content">
-                            <p class="create-time">2014.10 - 2016.10</p>
-                            <p class="job">产品经理 | 多桔子信息科技有限公司</p>
+                            <p class="create-time">2017.11 - 至今</p>
+                            <p class="job">.NET开发 | 上海上业信息科技股份有限公司</p>
                             <ul>
-                                <li>团队管理，电商产品管理，电子商务策划项目管理；</li>
-                                <li>网站需求分析，产品设计，产品跟踪，及后续产品优化工作；</li>
-                                <li>与研发、营销、客服配合，展开产品开发、销售、售后工作；</li>
-                                <li>产品应用市场调研和分析；</li>
-                                <li>公司品牌宣传，产品推广，负责公司网站策划和运营工作。</li>
+                                <li>项目开发,维护、客户沟通</li>
+                                <li>产品需求分析、产品开发</li>
+                                <li>负责新入职研发项目熟悉及任务分配</li>
                             </ul>
                         </div>
                     </div>
                     <div class="item w-experience-content">
                         <div class="work-content">
-                            <p class="create-time">2014.10 - 2016.10</p>
-                            <p class="job">软件开发工程师 | SINGU</p>
+                            <p class="create-time">2016.10 - 2017.10</p>
+                            <p class="job">.NET开发工程师 | 上海网熙信息科技游戏公司</p>
                             <ul>
-                                <li>负责公司内部业务系统的设计及改进，参与公司网上商城系统产品功能设计及实施工作；</li>
-                                <li>负责客户调研、客户需求分析、方案写作等工作；</li>
+                                <li>负责项目开发、维护、客户沟通</li>
+                                <li>负责产品开发</li>
                             </ul>
-                            <p class="key-word">参与公司多个大型电子商务项目的策划工作，担任大商集团网上商城一期建设项目经理。</p>
+                        </div>
+                    </div>
+                    <div class="item w-experience-content">
+                        <div class="work-content">
+                            <p class="create-time">2015.3 - 2016.10</p>
+                            <p class="job">.NET开发工程师 | 上海迅客信息技术有限公司</p>
+                            <ul>
+                                <li>负责项目开发、维护、客户沟通</li>
+                                <li>负责公司研发团队管理</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -203,7 +356,7 @@
                         <div class="col-9">
                             <p>了解更多的我</p>
                             <div class="icon-container">
-                                <a href="https://wuzongwen.github.io/" target="_blank" class="icon">
+                                <a href="https://github.com/wuzongwen?tab=repositories" target="_blank" class="icon">
                                     <img src="./static/image/GitHub.png" alt="">
                                 </a>
                                 <a href="https://blog.csdn.net/wu_zongwen" target="_blank" class="icon">
