--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             </section>
             <section>
                 <div class="title project">
-                    <p>工作以外经历</p>
+                    <p>工作外经历</p>
                 </div>
                 <div class="project-detail">
                     <div class="col-3-abs" id="project-0">
